Spacing Fixed & Removed A CTA

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -471,7 +471,7 @@ html {
 
 .badge {
   padding: 0.4em 0.75em;
-  font-size: 0.75rem;
+  font-size: 0.7rem;
   border-radius: 999px;
   font-weight: 400;
 }
